--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Children -- Conduct of life -- Juvenile fiction'
 - !lcsh 'Brothers and sisters -- Juvenile fiction'
 - !lcsh 'Farms -- Juvenile fiction'
+- GITenberg
 title: Father Brighthopes; Or, An Old Clergyman's Vacation
 url: http://www.gutenberg.org/ebooks/33221
